<resources>
    <string name="app_name">SkinGorithm</string>
    <string name="back">Back</string>
    <string name="profilepicture">profilePicture</string>
    <string name="userName">Halo %s</string>
    <string name="cta1">Cek Kondisi Wajahmu!</string>
    <string name="subCta1">Cari tahu kondisi wajahmu sekarang!</string>
    <string name="cta2">Cari Tahu Bahan-Bahan Skincare</string>
    <string name="subCta2">Informasi detail mengenai kandungan bahan skincare</string>
    <string name="content_image_desc">image_profile</string>
    <string name="full_name">Lorem Ipsum Dolor Sit Amet</string>
    <string name="username">loremipsum</string>
    <string name="desc_profile">Lorem Ipsum is simply dummy text of the printing and typesetting. how are you today?</string>
    <string name="btn_edit">Edit Profil</string>
    <string name="history">Histori Kondisi Kulit</string>
    <string name="desc_spinner">Months</string>
    <string name="menu_logout">Logout</string>
    <string name="history_date">11 Mei 2022</string>
    <string name="content_icon_face">icon face</string>
    <string name="history_score">70/100</string>
    <string name="btn_detail">Lihat Detail</string>
    <string name="ingredient_name"><u>Aloe Vera</u></string>
    <string name="function">Fungsi:</string>
    <string name="effect">Efek:</string>
    <string name="detail_function">Lorem Ipsum Dolor Sit Amet</string>
    <string name="detail_effect">Lorem Ipsum Dolor Sit Amet</string>
    <string name="text_img_search">Yuk cari tahu kandungan yang ada di skincare!</string>
    <string name="title_app_edit_profile">Edit Profil</string>
    <string name="btn_edit_photo">Edit Foto</string>
    <string name="btn_delete_photo">Hapus</string>
    <string name="btn_save_change">Simpan Perubahan</string>
    <string name="full_name_label">Nama Lengkap</string>
    <string name="username_label">Username</string>
    <string name="desc_label">Deskripsi</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="masuk">Masuk</string>
    <string name="masukCta">Gunakan akun yang telah didaftarkan!</string>
    <string name="name">Nama</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="daftar">Daftar</string>
    <string name="registerCta">Yuk segera daftarkan dirimu!</string>
    <string name="logo_image">SkinGorithm</string>
    <string name="loginCta">Belum Punya Akun?</string>
    <string name="registerClick">Yuk Daftar!</string>
    <string name="title_app_result_skincare">Hasil Analisis Wajah</string>
    <string name="text_number">1</string>
    <string name="text_title_result_skincare">Jerawat</string>
    <string name="percentage">100%</string>
    <string name="label_desc_result">Deskripsi:</string>
    <string name="desc_result">Lorem Ipsum is simply dummy text of the printing and typesetting.</string>
    <string name="number_result">90/100</string>
    <string name="label_face_type">Bentuk Wajah:</string>
    <string name="face_type">Hati</string>
    <string name="skin_diagnosis_label">Diagnosis Kulit</string>
    <string name="content_image_btn">Image Button Expand</string>
    <string name="btn_save_result">Simpan Hasil</string>
    <string name="btn_not_save_result">Tidak Simpan</string>
    <string name="nav_home">Home</string>
    <string name="nav_routines">Routines</string>
    <string name="nav_camera">Camera</string>
    <string name="nav_ingredients">Ingredients</string>
    <string name="nav_profile">Profile</string>
    <string name="masukCTA">Masuk</string>
    <string name="uploadWarning">Apakah kamu yakin akan menggunakan foto ini?</string>
    <string name="iya">Iya</string>
    <string name="tidak">Tidak</string>
    <string name="descUpload">Foto tersebut akan disimpan untuk perkembangan Skin Diary</string>
    <string name="fab_camera_button">Camera Button</string>
    <string name="desc_icon_calendar">Icon Calendar</string>
    <string name="desc_icon_notification">Icon Notification</string>
    <string name="date">12 Mei 2022</string>
    <string name="text_skincare_routine_1">0</string>
    <string name="strip">/</string>
    <string name="text_skincare_routine_2">7</string>
    <string name="text_skincare_routine_3">Rutinitas Skincare</string>
    <string name="routine">Membersihkan wajah</string>
    <string name="clock">08.00</string>
    <string name="btn_add_routine">+ Tambah Rutinitas</string>
    <string name="title_app_add_routine">Tambah Rutinitas</string>
    <string name="routine_label">Nama Rutinitas</string>
    <string name="clock_label">Jam</string>
    <string name="date_label">Tanggal</string>
    <string name="notif_label">Notifikasi Pengingat</string>
    <string name="repeat_label">Pengulangan</string>
    <string name="fifteen_field">15 menit sebelum</string>
    <string name="thirty_field">30 menit sebelum</string>
    <string name="no_repeat">Tidak diulang</string>
    <string name="repeat_daily">Setiap hari</string>
    <string name="repeat_weekly">Setiap minggu</string>
    <string name="loading_title">Wajah kamu sedang kami analisis!</string>
    <string name="failed_title">Maaf, wajah kamu gagal kami analisis!</string>
    <string name="content_loading">Loading Image</string>
    <string name="content_failed">Failed Image</string>
    <string name="btn_rephoto">Foto Ulang</string>
    <string name="usernameText">Username</string>
    <string name="Waktu_null">XX:XX</string>
</resources>