<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_baseline_home_inactive_24"
        android:title="@string/nav_home"
        android:enabled="true"/>

    <item
        android:id="@+id/navigation_routines"
        android:icon="@drawable/ic_baseline_schedule_inactive_24"
        android:title="@string/nav_routines"
        android:enabled="true"/>
    <item
        android:id="@+id/navigation_camera"
        android:icon="@drawable/ic_baseline_camera_inactive_24"
        android:title="@string/nav_camera" />
    <item
        android:id="@+id/navigation_ingredients"
        android:icon="@drawable/ic_baseline_ingredient_inactive_24"
        android:title="@string/nav_ingredients" />
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_baseline_profile_inactive_24"
        android:title="@string/nav_profile" />

</menu>