<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.profile.EditProfileActivity">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/img_profile"
        android:layout_width="67dp"
        android:layout_height="67dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/content_image_desc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/RoundedImageView"
        tools:src="@tools:sample/avatars" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="35dp"
        style="@style/FilledBlueButton"
        android:text="@string/btn_edit_photo"
        app:layout_constraintStart_toEndOf="@+id/img_profile"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button4"
        style="@style/FilledRedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="15dp"
        android:text="@string/btn_delete_photo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/full_name_label"
        style="@style/Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/full_name_label"
        app:layout_constraintStart_toStartOf="@+id/fullname_field"
        app:layout_constraintTop_toBottomOf="@+id/img_profile" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fullname_field"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="@+id/button4"
        app:layout_constraintStart_toStartOf="@+id/img_profile"
        app:layout_constraintTop_toBottomOf="@+id/full_name_label">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/full_name" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/username_label"
        style="@style/Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/username_label"
        app:layout_constraintStart_toStartOf="@+id/fullname_field"
        app:layout_constraintTop_toBottomOf="@+id/fullname_field" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/username_field"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="@+id/fullname_field"
        app:layout_constraintStart_toStartOf="@+id/username_label"
        app:layout_constraintTop_toBottomOf="@+id/username_label">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/desc_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/desc_label"
        style="@style/Title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username_field" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/desc_field"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="96dp"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="@+id/username_field"
        app:layout_constraintStart_toStartOf="@+id/desc_label"
        app:layout_constraintTop_toBottomOf="@+id/desc_label">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/Description"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/desc_profile" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button5"
        style="@style/FilledBlueButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/btn_save_change"
        app:layout_constraintEnd_toEndOf="@+id/desc_field"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="@+id/desc_field"
        app:layout_constraintTop_toBottomOf="@+id/desc_field" />

</androidx.constraintlayout.widget.ConstraintLayout>