<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.profile.ProfileFragment">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/img_profile"
        android:layout_width="67dp"
        android:layout_height="67dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/content_image_desc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/RoundedImageView"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/full_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/full_name"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:textStyle="bold"

        app:layout_constraintStart_toEndOf="@+id/img_profile"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="4dp"
        android:text="@string/username"
        android:textSize="12sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/img_profile"
        app:layout_constraintTop_toBottomOf="@+id/full_name" />

    <TextView
        android:id="@+id/desc_profile"
        android:layout_width="380dp"
        android:layout_height="36dp"
        android:layout_marginTop="36dp"
        android:lineSpacingExtra="2dp"
        android:text="@string/desc_profile"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:maxLines="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <Button
        android:id="@+id/btn_edit"
        style="@style/OutlinedButton"
        android:layout_width="380dp"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:text="@string/btn_edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/desc_profile"
        app:strokeColor="@color/primary_blue"
        app:strokeWidth="1.5dp" />

    <View
        android:id="@+id/line_profile"
        android:layout_width="380dp"
        android:layout_height="2dp"
        android:layout_marginTop="5dp"
        android:background="@color/primary_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_edit" />

    <TextView
        android:id="@+id/histori_kulit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        style="@style/Title"
        android:text="@string/history"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_edit" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:spinnerMode="dropdown"
        android:contentDescription="@string/desc_spinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/histori_kulit" />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="380dp"
        android:layout_height="454dp"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner"
        app:layout_constraintVertical_bias="0.086"
        tools:listitem="@layout/item_history" />


</androidx.constraintlayout.widget.ConstraintLayout>